update api and allow deletion
