# docs/redoc/master/openapi.json
@@ -85,7 +85,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/WriteLockOptions"
+                "$ref": "#/components/schemas/LocksOption"
               }
             }
           }
@@ -130,7 +130,7 @@
                       ]
                     },
                     "result": {
-                      "type": "boolean"
+                      "$ref": "#/components/schemas/LocksOption"
                     }
                   }
                 }
@@ -186,121 +186,7 @@
                       ]
                     },
                     "result": {
-                      "type": "boolean"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/write_unlock": {
-      "put": {
-        "summary": "Unlock writing",
-        "description": "Unlock writing. If locked, all write operations and collections creation are forbidden. Returns previous lock value",
-        "operationId": "put_write_unlock",
-        "tags": [
-          "service"
-        ],
-        "responses": {
-          "default": {
-            "description": "error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "4XX": {
-            "description": "error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "time": {
-                      "type": "number",
-                      "format": "float",
-                      "description": "Time spent to process this request"
-                    },
-                    "status": {
-                      "type": "string",
-                      "enum": [
-                        "ok"
-                      ]
-                    },
-                    "result": {
-                      "type": "boolean"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "get": {
-        "summary": "Check if writing is unlocked",
-        "description": "Check if writing is unlocked. If locked, all write operations and collections creation are forbidden",
-        "operationId": "get_write_unlock",
-        "tags": [
-          "service"
-        ],
-        "responses": {
-          "default": {
-            "description": "error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "4XX": {
-            "description": "error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "time": {
-                      "type": "number",
-                      "format": "float",
-                      "description": "Time spent to process this request"
-                    },
-                    "status": {
-                      "type": "string",
-                      "enum": [
-                        "ok"
-                      ]
-                    },
-                    "result": {
-                      "type": "boolean"
+                      "$ref": "#/components/schemas/LocksOption"
                     }
                   }
                 }
@@ -5950,12 +5836,18 @@
           }
         }
       },
-      "WriteLockOptions": {
+      "LocksOption": {
         "type": "object",
+        "required": [
+          "write"
+        ],
         "properties": {
           "error_message": {
             "type": "string",
             "nullable": true
+          },
+          "write": {
+            "type": "boolean"
           }
         }
       }
