# src/actix/api/service_api.rs
@@ -1,6 +1,6 @@
 use actix_web::rt::time::Instant;
 use actix_web::web::Query;
-use actix_web::{get, put, web, Responder};
+use actix_web::{get, post, web, Responder};
 use schemars::JsonSchema;
 use segment::telemetry::Anonymize;
 use serde::{Deserialize, Serialize};
@@ -8,7 +8,7 @@ use storage::content_manager::toc::TableOfContent;
 use tokio::sync::Mutex;
 
 use crate::actix::helpers::process_response;
-use crate::common::helpers::WriteLockOptions;
+use crate::common::helpers::LocksOption;
 use crate::common::telemetry::TelemetryCollector;
 
 #[derive(Deserialize, Serialize, JsonSchema)]
@@ -33,45 +33,32 @@ async fn telemetry(
     process_response(Ok(telemetry_data), timing)
 }
 
-#[put("/write_lock")]
-async fn put_write_lock(
+#[post("/locks")]
+async fn put_locks(
     toc: web::Data<TableOfContent>,
-    options: Option<web::Json<WriteLockOptions>>,
+    locks_option: web::Json<LocksOption>,
 ) -> impl Responder {
     let timing = Instant::now();
-    let result = toc.get_ref().set_write_lock(
-        true,
-        options.and_then(|options| options.error_message.clone()),
-    );
+    let result = LocksOption {
+        write: toc.get_ref().is_write_locked(),
+        error_message: toc.get_ref().get_lock_error_message(),
+    };
+    toc.get_ref()
+        .set_locks(locks_option.write, locks_option.error_message.clone());
     process_response(Ok(result), timing)
 }
 
-#[get("/write_lock")]
-async fn get_write_lock(toc: web::Data<TableOfContent>) -> impl Responder {
+#[get("/locks")]
+async fn get_locks(toc: web::Data<TableOfContent>) -> impl Responder {
     let timing = Instant::now();
-    let result = toc.get_ref().is_locked();
-    process_response(Ok(result), timing)
-}
-
-#[put("/write_unlock")]
-async fn put_write_unlock(toc: web::Data<TableOfContent>) -> impl Responder {
-    let timing = Instant::now();
-    let result = toc.get_ref().set_write_lock(false, None);
-    process_response(Ok(result), timing)
-}
-
-#[get("/write_unlock")]
-async fn get_write_unlock(toc: web::Data<TableOfContent>) -> impl Responder {
-    let timing = Instant::now();
-    let result = !toc.get_ref().is_locked();
+    let result = LocksOption {
+        write: toc.get_ref().is_write_locked(),
+        error_message: toc.get_ref().get_lock_error_message(),
+    };
     process_response(Ok(result), timing)
 }
 
 // Configure services
 pub fn config_service_api(cfg: &mut web::ServiceConfig) {
-    cfg.service(telemetry)
-        .service(put_write_lock)
-        .service(get_write_lock)
-        .service(put_write_unlock)
-        .service(get_write_unlock);
+    cfg.service(telemetry).service(put_locks).service(get_locks);
 }
